--- a/Related to Sensing data with both gyro and accelo/Webpage/design2.css
+++ b/Related to Sensing data with both gyro and accelo/Webpage/design2.css
@@ -75,34 +75,69 @@
 }*/
 
 .wrapper5 { /*  offset box */
-    width: 45%;
+    width: 24.4%;
     height: 115px;
     position: absolute;
 
     top: 27.5%;
-    left: 73.5%;
+    left: 84.5%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+}
+
+.wrapper5a { /* UUID */
+    width: 22.4%;
+    height: 115px;
+    position: absolute;
+
+    top: 27.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+}
+
+.wrapper5b { /*  RSSI */
+    width: 10%;
+    height: 115px;
+    position: absolute;
+
+    top: 27.5%;
+    left: 67.15%;
     transform: translate(-50%, -50%);
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
 }
 
 .wrapper6a {   /*  threshold box */
-    width: 20%;
+    width: 10%;
     height: 115px;
     position: absolute;
     top: 27.5%;
-    left:12.5%;
+    left:8.5%;
     transform: translate(-50%, -50%);
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
 }
 
 .wrapper6b {   /*  threshold box */
-    width: 20%;
+    width: 10%;
     height: 115px;
     position: absolute;
     top: 27.5%;
-    left:35%;
+    left:19.5%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+}
+
+.wrapper6c {   /*  threshold box */
+    width: 13%;
+    height: 115px;
+    position: absolute;
+    top: 27.5%;
+    left:31.5%;
     transform: translate(-50%, -50%);
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
@@ -231,7 +266,45 @@ body {
     font-size: 25px;
 }
 
+.offset-limit-maina {
+  text-align: center;
+    background-color: #EB4D4D;
+    color: #fff;
+    width: 60%;
+    margin: 0 auto;
+    padding: 12px;
+    font-size: 25px;
+}
+
+.offset-limit-mainb {
+  text-align: center;
+    background-color: #EB4D4D;
+    color: #fff;
+    width: 60%;
+    margin: 0 auto;
+    padding: 12px;
+    font-size: 25px;
+}
+
 .offset-limit {
+  position: absolute;
+  left: 50%;
+  top: 60%;
+  transform: translateX(-50%);
+  height: 60px;
+  font-size: 20px;
+}
+
+.offset-limita {
+  position: absolute;
+  left: 50%;
+  top: 60%;
+  transform: translateX(-50%);
+  height: 60px;
+  font-size: 20px;
+}
+
+.offset-limitb {
   position: absolute;
   left: 50%;
   top: 60%;
@@ -250,16 +323,6 @@ body {
     font-size: 25px;
 }
 
-.set-threshold-limit-input {
-  position: absolute;
-  left: 48%;
-  top: 60%;
-  transform: translateX(-50%);
-  height: 100px;
-  font-size: 50px;
-}
-
-
 .set-threshold-limitB {
   text-align: center;
     background-color: #EB4D4D;
@@ -270,7 +333,34 @@ body {
     font-size: 25px;
 }
 
+.set-threshold-limitC {
+  text-align: center;
+    background-color: #EB4D4D;
+    color: #fff;
+    width: 60%;
+    margin: 0 auto;
+    padding: 12px;
+    font-size: 25px;
+}
+
+.set-threshold-limit-input {
+  position: absolute;
+  left: 48%;
+  top: 60%;
+  transform: translateX(-50%);
+  height: 100px;
+  font-size: 50px;
+}
+
 .set-threshold-limit-inputB {
+  position: absolute;
+  left: 48%;
+  top: 60%;
+  transform: translateX(-50%);
+  height: 100px;
+  font-size: 50px;
+}
+.set-threshold-limit-inputC {
   position: absolute;
   left: 48%;
   top: 60%;
